--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2651,107 +2651,107 @@ stories:
   domain: http://www.willcoxrangenews.com/
   link: https://www.willcoxrangenews.com/national/entertainment/article_063dd801-350c-530a-9aeb-debe05c046fd.html
 images:
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-kandinsky-bv.jpg
-- name: white-house-lawn-white-house-window-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-asteroids.jpg
-- name: bordercrossing-bordercrossing-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-gred-mash.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colored-circuits.jpg
-- name: oldcabin-oldcabin-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-electricity.jpg
-- name: curtain-curtain-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-nazi-poster.jpg
-- name: gears-4882162452-fa3126b38d-b-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-monet-one.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-constitution.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
-- name: berlinwall-DSC-0084-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dali-three.jpg
-- name: oldhouse-granaryfield-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-yellow-paper.jpg
-- name: old-door-lock-old-door-lock-2-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-soul.jpg
-- name: windowmountain-window-mountain-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crabapple.jpg
-- name: machine-road-machine-road-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-post-modern.jpg
-- name: downtown-street-view-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-street-view-leaflets-of-the-russian-revolution.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-cinnamon-rolls.jpg
-- name: power-lines-power-lines-empty-space-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crabapple.jpg
-- name: razorcliff-razorcliff-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-aqua.jpg
-- name: docks-docks-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-pablo-blue.jpg
-- name: locked-up-steam-lock-up-steam-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-two.jpg
-- name: store-on-corner-oldcabin-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-emily-carr.jpg
-- name: old-cabin-oldcabin-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-green-zuma.jpg
-- name: rain-princess-DSC_0001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0001.jpg
-- name: aws-s3-models-dali1.t7
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-models-dali1.t7
-- name: oldcabin-store-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-nazi-poster.jpg
-- name: beach-rocks-beach-rocks-currents-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-two.jpg
-- name: gypsy-wagon-gypsywagon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
-- name: miamibeach-miamibeach-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-electricity.jpg
-- name: oldhousecars-house-old-cars-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-alberto-giacometti.jpg
-- name: oldhotel-oldhotel-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-far-away.jpg
-- name: locked-up-steam-lock-up-steam-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-dali.jpg
-- name: oldtrain-oldtrain-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dali-two.jpg
-- name: old-cabin-oldcabin-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
-- name: subway-subway-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-bright-sand.jpg
-- name: oldroad-old-road-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smoking-cigarette.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-atari-asteroids.jpg
-- name: dragon-desert-desert-dragon-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-rain.jpg
-- name: curtain-curtain-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alberto-giacometti.jpg
-- name: curtain-curtain-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-far-away.jpg
-- name: old-church-oldchurch-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-kand-two.jpg
-- name: docks-docks-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-emily-carr.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
-- name: cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-- name: razorcliff-razorcliff-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-ww2-dresden.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-copper-circuit-2.jpg
-- name: abe-lincoln-one-satan-red-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-15-87.jpg
-- name: castle-wall-DSC-0067-blue-circuit-3.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-3.JPG
-- name: razorwire-DSC-0080-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-cinnamon-rolls.jpg
-- name: razorwire-DSC-0080-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-really-hot.jpg
+- name: downtown-los-angeles-downtown-la-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
+- name: fence-gorilla-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-blue-circuit.jpg
+- name: window-window-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-rainbow-festival.jpg
+- name: cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
+- name: yosemite-yosemite-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-plentiful.jpg
+- name: old-school-house-old-schoolhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
+- name: oldhouse-granaryfield-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-post-modern.jpg
+- name: fence-fence-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-soul.jpg
+- name: trucksilo-trucksilo-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colored-circuits.jpg
+- name: capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
+- name: fence-mexico-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-pablo-blue.jpg
+- name: yosemite-yosemite-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-neo-instinct.jpg
+- name: powerlines-power-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crunch-paper.jpg
+- name: mosaic-face-mosaic-face-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-atari-asteroids.jpg
+- name: catacombs-catacombs-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
+- name: miamibeach-miamibeach-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-brush.jpg
+- name: dc-statue-dcstatue-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-graham-sutherland.jpg
+- name: capital-battle-capitolbattle-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-alberto-giacometti.jpg
+- name: white-house-whitehouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-deep-connections.jpg
+- name: old-cabin-oldcabin-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-light-dali.jpg
+- name: blossombar-crunch-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crunch-paper-file-00-00-50-62.jpg
+- name: hollywood-building-hollywood-building-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-yellow-paper.jpg
+- name: mediterranean-mediterranean-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-brush.jpg
+- name: paris-paris-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-cinnamon-rolls.jpg
+- name: oldhouse-granaryfield-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-dresden.jpg
+- name: bluelake-crafty-painting-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-00-00-00.jpg
+- name: aws-s3-stories-catacombs-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-blue-circuit-3.jpg
+- name: fence-mexico-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dark-soul.jpg
+- name: downtown-los-angeles-downtown-la-colorful-blocks.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colorful-blocks.JPG
+- name: containership-containership-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-space-pizza.jpg
+- name: windowmountain-window-mountain-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-aqua.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
+- name: beach-clouds-lifeguard-beachclouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-smooth-ride.jpg
+- name: yosemite-yosemite-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
+- name: containership-containership-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purp-paper.jpg
+- name: berlinwall2-berlinwall-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-brush.jpg
+- name: crow-crow-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-far-away.jpg
+- name: old-house-oldhouse-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-bright-sand.jpg
+- name: aws-s3-stories-supreme-court-statues.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-supreme-court-statues.jpg
+- name: bordercrossing-bordercrossing-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smoking-cigarette.jpg
+- name: catacombs-catacombs-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-diego-rivera1.jpg
+- name: old-school-house-old-schoolhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-collage.jpg
+- name: legal-statue-legalstatue-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-kandinsky-bv.jpg
+- name: lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
+- name: cargo-ship-cargo-ship-on-sea-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-emily-carr.jpg
+- name: oldsmallboat-oldsmallboat-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-neo-instinct.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-3.jpg
+- name: beach-rocks-beach-rocks-currents-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-storm.jpg
+- name: window-window-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-space-pizza.jpg
+- name: christianity-christianity-under-construction-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dark-rain.jpg
+- name: locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
 ---
 Explosion Causes Partial Collapse Of Dorm At University.&nbsp;Four Bikes Raffled Off At Bike Rodeo.&nbsp;Dame Barbara Windsor Is 'fighting Fit'.&nbsp;Toddler Sings Adorable Rendition Of 'God Bless America'.&nbsp;Cainsvilles Fourth Of July Set For This Weekend.&nbsp;Texas Teen Dies After Firework Explodes In His Chest.&nbsp;Harsh Winter Leads To Summer Woes.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;
