--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2651,107 +2651,107 @@ stories:
   domain: http://www.willcoxrangenews.com/
   link: https://www.willcoxrangenews.com/national/entertainment/article_063dd801-350c-530a-9aeb-debe05c046fd.html
 images:
-- name: downtown-los-angeles-downtown-la-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
-- name: fence-gorilla-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-blue-circuit.jpg
-- name: window-window-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-rainbow-festival.jpg
-- name: cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-- name: yosemite-yosemite-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-plentiful.jpg
-- name: old-school-house-old-schoolhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
-- name: oldhouse-granaryfield-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-post-modern.jpg
-- name: fence-fence-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-soul.jpg
-- name: trucksilo-trucksilo-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colored-circuits.jpg
-- name: capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
-- name: fence-mexico-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-pablo-blue.jpg
-- name: yosemite-yosemite-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-neo-instinct.jpg
-- name: powerlines-power-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crunch-paper.jpg
-- name: mosaic-face-mosaic-face-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-atari-asteroids.jpg
-- name: catacombs-catacombs-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
-- name: miamibeach-miamibeach-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-brush.jpg
-- name: dc-statue-dcstatue-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-graham-sutherland.jpg
-- name: capital-battle-capitolbattle-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-alberto-giacometti.jpg
-- name: white-house-whitehouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-deep-connections.jpg
-- name: old-cabin-oldcabin-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-light-dali.jpg
-- name: blossombar-crunch-paper-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crunch-paper-file-00-00-50-62.jpg
-- name: hollywood-building-hollywood-building-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-yellow-paper.jpg
-- name: mediterranean-mediterranean-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-brush.jpg
-- name: paris-paris-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-cinnamon-rolls.jpg
-- name: oldhouse-granaryfield-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-dresden.jpg
-- name: bluelake-crafty-painting-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-00-00-00.jpg
-- name: aws-s3-stories-catacombs-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-blue-circuit-3.jpg
-- name: fence-mexico-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dark-soul.jpg
-- name: downtown-los-angeles-downtown-la-colorful-blocks.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colorful-blocks.JPG
-- name: containership-containership-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-space-pizza.jpg
-- name: windowmountain-window-mountain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-aqua.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
-- name: beach-clouds-lifeguard-beachclouds-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-smooth-ride.jpg
-- name: yosemite-yosemite-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
-- name: containership-containership-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purp-paper.jpg
-- name: berlinwall2-berlinwall-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-brush.jpg
-- name: crow-crow-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-far-away.jpg
-- name: old-house-oldhouse-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-bright-sand.jpg
-- name: aws-s3-stories-supreme-court-statues.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-supreme-court-statues.jpg
-- name: bordercrossing-bordercrossing-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smoking-cigarette.jpg
-- name: catacombs-catacombs-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-diego-rivera1.jpg
-- name: old-school-house-old-schoolhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-collage.jpg
-- name: legal-statue-legalstatue-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-kandinsky-bv.jpg
-- name: lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
-- name: cargo-ship-cargo-ship-on-sea-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-emily-carr.jpg
-- name: oldsmallboat-oldsmallboat-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-neo-instinct.jpg
-- name: server-cloud-server-racks-clouds-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-3.jpg
-- name: beach-rocks-beach-rocks-currents-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-storm.jpg
-- name: window-window-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-space-pizza.jpg
-- name: christianity-christianity-under-construction-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dark-rain.jpg
-- name: locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
+- name: power-lines-power-lines-empty-space-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-plentiful.jpg
+- name: old-school-house-old-schoolhouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-internet-numbers.jpg
+- name: oldhouse-granaryfield-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-sunday.jpg
+- name: oldtrain-oldtrain-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-bright-sand.jpg
+- name: oldtrain-oldtrain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-yellow-collage.jpg
+- name: window-window-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-soul.jpg
+- name: white-house-whitehouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-soul.jpg
+- name: old-gas-pumps-oldgaspumps-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-cinnamon-rolls.jpg
+- name: stories-new-69-120-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-69-120-800-500-0-max-0-1--1.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-space-pizza.jpg
+- name: ellis-island-ellis-island-room-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-atari-asteroids.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
+- name: fence-mexico-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-marcel-duchamp.jpg
+- name: rain-princess-DSC_0076.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0076.jpg
+- name: gypsy-wagon-gypsywagon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-light-dali.jpg
+- name: crow_space_pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_space_pizza.jpg
+- name: blossombar-smooth-ride-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-24-99.jpg
+- name: border-crossing-bordercrossing-gan-vogh.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gan-vogh.png
+- name: curtain-curtain-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-purple-storm.jpg
+- name: subway-subway-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-cinnamon-rolls.jpg
+- name: old-barn-old-barn-1500-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sunday.jpg
+- name: miamibeach-miamibeach-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crunch-paper.jpg
+- name: razorcliff-razorcliff-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-aqua.jpg
+- name: walled-garden-walled-garden-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-electricity.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-umberto-bocc.jpg
+- name: containership-containership-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-internet-numbers.jpg
+- name: white-house-lawn-white-house-window-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-diego-rivera1.jpg
+- name: aws-s3-stories-white-house-window-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-white-house-window-atari-missle.jpg
+- name: beach-clouds-lifeguard-beachclouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-dali.jpg
+- name: oldbarn-oldbarn-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-wols.jpg
+- name: gypsy-wagon-gypsywagon-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-post-modern.jpg
+- name: meadowbutterfly-meadow-butterfly-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-dali.jpg
+- name: oldcabin-store-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
+- name: eduardo-eduardo-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-smooth-ride.jpg
+- name: gears-4882162452-fa3126b38d-b-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-pond.jpg
+- name: nyc-flag-nycflag-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-pond.jpg
+- name: razorcliff-razorcliff-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-two.jpg
+- name: oldtrain-oldtrain-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-atari-asteroids.jpg
+- name: death-valley-death-valley-national-park-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kand-two.jpg
+- name: oldcabin-oldcabin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-internet-numbers.jpg
+- name: old-house-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-really-hot.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-umberto-bocc.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-umberto-bocc.JPG
+- name: rockingchair-rockingchair-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-post-modern.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-cinnamon-rolls.jpg
+- name: statue-of-liberty-front-view-statueofliberty-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-aqua.jpg
+- name: sand-hand-sand-hand-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-purple-pond.jpg
+- name: meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-aqua.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-aqua.png
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purp-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purp-paper.png
+- name: dragon-desert-desert-dragon-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dali-three.jpg
+- name: gears-4882162452-fa3126b38d-b-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crunch-paper.jpg
 ---
 Explosion Causes Partial Collapse Of Dorm At University.&nbsp;Four Bikes Raffled Off At Bike Rodeo.&nbsp;Dame Barbara Windsor Is 'fighting Fit'.&nbsp;Toddler Sings Adorable Rendition Of 'God Bless America'.&nbsp;Cainsvilles Fourth Of July Set For This Weekend.&nbsp;Texas Teen Dies After Firework Explodes In His Chest.&nbsp;Harsh Winter Leads To Summer Woes.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;
